Fix rendering on mobile version (#10)

--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@
 .container .mainSection {
   display: flex;
   flex-direction: row;
+  flex-wrap:wrap;
 
   gap: 3rem;
 }
