--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,6 +16,7 @@
 
 .header {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
